feat: bring in some patterns from grand prix

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,1 +1,8 @@
 #config_version=6
+
+# NOTE: this is needed for the unittests which expect
+#       the main config file to be named config.yaml.
+config:
+- development.yaml
+# - production_linux.yaml
+# - production_macos.yaml
